# amax-redirect-asi

./: .gitignore  Cargo.toml  Make.cmd  README.md  make.cmd
.github/workflows/: rust.yml
amax/cfg/: amax-redirect.cfg
amax/config/: amax-redirect.cfg
src/: lib.rs  redirects.rs
